<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lvl_description_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/lvl_description_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:src="@drawable/ic_cross"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/lvl_description_cv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardBackgroundColor="@color/transparent"
        app:cardCornerRadius="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:showIn="@layout/activity_level_selection">

        <ImageView
            android:id="@+id/lvl_description_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/profile_goku" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/lvl_description_name"
        style="@style/AppTheme.Game.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/lvl_description_title_opponent"
        app:layout_constraintBottom_toTopOf="@+id/lvl_description_place"
        app:layout_constraintLeft_toRightOf="@+id/lvl_description_cv"
        app:layout_constraintTop_toTopOf="@+id/lvl_description_cv" />

    <TextView
        android:id="@+id/lvl_description_name_value"
        style="@style/AppTheme.Game.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/lvl_description_name"
        app:layout_constraintLeft_toRightOf="@+id/lvl_description_difficulty"
        app:layout_constraintRight_toLeftOf="@+id/lvl_description_back"
        app:layout_constraintTop_toTopOf="@+id/lvl_description_name"
        tools:text="Opponent" />


    <TextView
        android:id="@+id/lvl_description_place"
        style="@style/AppTheme.Game.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lvl_description_title_place"
        app:layout_constraintBottom_toTopOf="@+id/lvl_description_difficulty"
        app:layout_constraintLeft_toLeftOf="@+id/lvl_description_name"
        app:layout_constraintTop_toBottomOf="@+id/lvl_description_name" />

    <TextView
        android:id="@+id/lvl_description_place_value"
        style="@style/AppTheme.Game.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/lvl_description_place"
        app:layout_constraintLeft_toRightOf="@+id/lvl_description_difficulty"
        app:layout_constraintRight_toLeftOf="@+id/lvl_description_back"
        app:layout_constraintTop_toTopOf="@+id/lvl_description_place"
        tools:text="Kami's Place" />


    <TextView
        android:id="@+id/lvl_description_difficulty"
        style="@style/AppTheme.Game.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lvl_description_title_difficulty"
        app:layout_constraintBottom_toBottomOf="@+id/lvl_description_cv"
        app:layout_constraintLeft_toLeftOf="@+id/lvl_description_name"
        app:layout_constraintTop_toBottomOf="@+id/lvl_description_place" />

    <TextView
        android:id="@+id/lvl_description_difficulty_value"
        style="@style/AppTheme.Game.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/lvl_description_difficulty"
        app:layout_constraintLeft_toRightOf="@+id/lvl_description_difficulty"
        app:layout_constraintRight_toLeftOf="@+id/lvl_description_back"
        app:layout_constraintTop_toTopOf="@+id/lvl_description_difficulty"
        tools:text="Normal" />

    <ImageView
        android:id="@+id/lvl_description_difficulty_switch_left"
        style="@style/AppTheme.Game.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/lvl_description_difficulty_value"
        app:layout_constraintRight_toLeftOf="@+id/lvl_description_difficulty_value"
        app:layout_constraintTop_toTopOf="@+id/lvl_description_difficulty_value" />

    <ImageView
        android:id="@+id/lvl_description_difficulty_switch_right"
        style="@style/AppTheme.Game.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:src="@drawable/ic_right_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/lvl_description_difficulty_value"
        app:layout_constraintLeft_toRightOf="@+id/lvl_description_difficulty_value"
        app:layout_constraintTop_toTopOf="@+id/lvl_description_difficulty_value" />

    <TextView
        android:id="@+id/lvl_description_speed"
        style="@style/AppTheme.Game.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lvl_description_title_speed"
        app:layout_constraintBottom_toTopOf="@+id/lvl_description_might"
        app:layout_constraintLeft_toLeftOf="@+id/lvl_description_cv"
        app:layout_constraintTop_toBottomOf="@+id/lvl_description_cv" />


    <ProgressBar
        android:id="@+id/lvl_description_speed_value"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:maxWidth="150dp"
        android:progressTint="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/lvl_description_speed"
        app:layout_constraintLeft_toRightOf="@+id/lvl_description_health"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lvl_description_speed"
        tools:progress="80" />


    <TextView
        android:id="@+id/lvl_description_might"
        style="@style/AppTheme.Game.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lvl_description_title_might"
        app:layout_constraintBottom_toTopOf="@+id/lvl_description_health"
        app:layout_constraintLeft_toLeftOf="@+id/lvl_description_cv"
        app:layout_constraintTop_toBottomOf="@+id/lvl_description_speed" />

    <ProgressBar
        android:id="@+id/lvl_description_might_value"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:maxWidth="150dp"
        android:progressTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/lvl_description_might"
        app:layout_constraintLeft_toRightOf="@+id/lvl_description_health"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lvl_description_might"
        tools:progress="90" />


    <TextView
        android:id="@+id/lvl_description_health"
        style="@style/AppTheme.Game.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lvl_description_title_health"
        app:layout_constraintBottom_toTopOf="@+id/lvl_description_validate"
        app:layout_constraintLeft_toLeftOf="@+id/lvl_description_cv"
        app:layout_constraintTop_toBottomOf="@+id/lvl_description_might" />

    <ProgressBar
        android:id="@+id/lvl_description_health_value"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:maxWidth="150dp"
        android:progressTint="@color/red"
        app:layout_constraintBottom_toBottomOf="@+id/lvl_description_health"
        app:layout_constraintLeft_toRightOf="@+id/lvl_description_health"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lvl_description_health"
        tools:progress="60" />

    <TextView
        android:id="@+id/lvl_description_validate"
        style="@style/AppTheme.Game.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/lvl_description_validate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>