<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_home"
    tools:context=".presentation.home.HomeActivity">

    <ImageView
        android:id="@+id/title_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="100dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/subtitle_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="100dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_subtitle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_logo" />

    <Button
        android:id="@+id/levels_button"
        style="@style/AppTheme.Game.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="50dp"
        android:text="@string/home_levels"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/history_mode_button"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_logo"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/history_mode_button"
        style="@style/AppTheme.Game.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="50dp"
        android:text="@string/home_ascension"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/levels_button"
        app:layout_constraintRight_toLeftOf="@id/scores_button"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_logo"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/scores_button"
        style="@style/AppTheme.Game.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="50dp"
        android:text="@string/home_scores"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/history_mode_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_logo"
        app:layout_constraintVertical_bias="0.75" />

    <VideoView
        android:id="@+id/video_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</android.support.constraint.ConstraintLayout>